# dmyersturnbull.github.io

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  LICENSE.txt  README.md  biome.jsonc  config.toml  dev-requirements.txt  index.html  index.xml  justfile  mkdocs.yaml  package.json  prek.toml  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: deploy.yaml  run.yml
categories/: index.html  index.xml
coding-tips/: index.html
content/: _index.md
content/posts/: coding-tips.md  data-science-setup.md  linux-setup.md  local-mariadb.md  macos-setup.md  mariadb-best-practices.md  misc-topics.md  parser-design.md  partition-scheme.md  python-infrastructure.md  research-layout.md  software-testing.md  video-encoding.md  web-stuff.md  windows-setup.md
contents/: SUMMARY.md  coding-conventions.md  contributing-guide.md  contributor-guide.md  data-science-setup.md  index.md  linux-setup.md  macos-setup.md  maintainer-guide.md  mariadb-best-practices.md  parser-design.md  partition-scheme.md  python-infrastructure.md  research-layout.md  software-testing.md  video-encoding.md  web-stuff.md  windows-setup.md
contents/cheatsheet/: ansi.sh  bash-tips.md  click-to-copy-symbols.md  git-plumbing.md  git-recipes.md  github-actions.md  index.md  linux-tables.md  sunlight.md  unit-conversions.md
contents/convention/: apis.md  bash.md  cli.md  docker.md  documentation.md  index.md  intellij-style.xml  java.md  javascript-and-typescript.md  javascript.md  python.md  scripts-and-build-files.md  sql.md  typescript.md
contents/guide/: _common-setup.md  _common.md  _nix-common.md  add-bookmarks.sh  add-bookmarks.sh.txt  arduino-setup.md  arduino.md  commonrc-config.sh  commonrc.sh  commonrc.sh.txt  ffmpeg-setup.md  ffmpeg.md  git-and-ssh.md  git-ssh-and-gpg.md  git-ssh-gpg.md  gnome.md  index.md  install-mariadb-non-root.sh  linux-setup.md  linux.md  macos-setup.md  macos.md  mamba-and-conda.md  mamba-setup.md  mariadb-best-practices.md  mariadb-local-install.md  mariadb-setup.md  mariadb.md  nix-shells.md  research-projects.md  todos.sh  venv-utils.sh  windows-setup.md  windows.md
contents/js/: fixups.js
contents/misc/: ffmpeg-compile.md  mariadb-local-install.md  micromamba-setup.md
contents/post/: abnf-hybrid.md  calculating-durations.md  correct-exception-handling.md  design-pattern-zoo.md  duck-typing-is-quackery.md  frontends-for-time-travelers.md  git-tips-and-microscripts.md  index.md  iso-8601-problems.md  python-infrastructure.md  query-dsl.md  retooling-python-builds.md  scientific-software-testing.md  scientific-software-tests.md  software-testing-strategy-guide.md  software-testing.md  testing-scientific-software.md  unicode-symbol-snatcher.md  uri-safe-characters.md  web-stuff.md  wonders-of-chatgpt.md  yaml-is-terrible.md
contents/ref/: _label-table.md  coding-conventions.md  contributor-guide.md  eclipse-style.xml  github-labels.md  index.md  intellij-style.xml  issue-labels.md  maintainer-guide.md
contents/scripts/: apprise.sh  back-up-mariadb.sh  copy.sh  create-btrfs-backup.sh  extract.sh  find-crontab.sh  gh-log.sh  todos.sh  write-mariadb-schema.sh
contents/spec/: advanced-bnf-with-regex.md  commit-messages.md  conventional-commits.md  fixed-iso-8601.md  hateoas-see-header.md  http-get-search-dsl.md  http-see-header.md  index.md  linky-rest.md  non-conventional-commits.md  query-dsl.md  regex-bnf.md  restricted-iso-8601.md
contents/style/: apis.md  documentation.md  index.md  intellij-style.xml  java.md  javascript.md  python.md  scripts.md  sql.md
contents/stylesheets/: extra.css
css/: index.css
data-science-setup/: index.html
docs/: 404.html  SUMMARY.md  index.html  index.md  index.xml  sitemap.xml
docs/categories/: index.html  index.xml
docs/cheatsheet/: ansi.sh  bash-tips.md  box-drawing.md  git.md  github-actions.md  index.md  linux-tables.md  symbols.md
docs/coding-tips/: index.html
docs/convention/: apis.md  bash.md  cli.md  docker.md  documentation.md  general.md  index.md  java.md  python.md  sql.md  typescript.md
docs/data-science-setup/: index.html
docs/guide/: arduino.md  ffmpeg.md  git-ssh-and-gpg.md  gnome.md  index.md  kde.md  linux.md  macos.md  mamba-and-conda.md  mariadb.md  nix-shells.md  research-projects.md  toolkits.md  windows.md
docs/js/: fixups.js
docs/linux-setup/: index.html
docs/local-mariadb/: index.html
docs/macos-setup/: index.html
docs/mariadb-best-practices/: index.html
docs/misc-topics/: index.html
docs/partitioning-scheme/: index.html
docs/post/: calculating-durations.md  correct-exception-handling.md  duck-typing-is-quackery.md  frontends-for-time-travelers.md  index.md  iso-8601-problems.md  research-projects.md  retooling-python-builds.md  software-testing-strategy-guide.md  testing-scientific-software.md  uri-safe-characters.md  wonders-of-chatgpt.md  yaml-is-terrible.md
docs/posts/: index.html  index.xml
docs/python-infrastructure/: index.html
docs/ref/: contributor-guide.md  index.md  issue-labels.md  maintainer-guide.md
docs/research-layout/: index.html
docs/scripts/: apprise.sh  back-up-mariadb.sh  copy.sh  create-btrfs-backup.sh  extract.sh  find-crontab.sh  gh-log.sh  todos.sh  write-mariadb-schema.sh
docs/software-testing/: index.html
docs/spec/: commit-messages.md  fixed-iso-8601.md  http-get-search-dsl.md  http-see-header.md  index.md  non-conventional-commits.md  regex-bnf.md
docs/stylesheets/: extra.css
docs/tags/: index.html  index.xml
docs/video-encoding/: index.html
docs/web-stuff/: index.html
docs/windows-setup/: index.html
linux-setup/: index.html
local-mariadb/: index.html
macos-setup/: index.html
mariadb-best-practices/: index.html
misc-topics/: index.html
partitioning-scheme/: index.html
posts/: index.html  index.xml
python-infrastructure/: index.html
research-layout/: index.html
software-testing/: index.html
tags/: index.html  index.xml
themes/contrast-hugo/: README.md
video-encoding/: index.html
web-stuff/: index.html
windows-setup/: index.html
(+22 files in other folders)
