# SPDX-FileCopyrightText: Copyright 2017-2025, Douglas Myers-Turnbull
# SPDX-PackageHomePage: https://dmyersturnbull.github.io
# SPDX-License-Identifier: CC-BY-SA-4.0

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.25"]

[project]
name = "dmyersturnbull.github.io"
version = "0.1.0"
requires-python = "~=3.13"
readme = { file = "README.md", content-type = "text/markdown" }
description = "GitHub Pages https://dmyersturnbull.github.io"
maintainers = [ { name = "Douglas Myers-Turnbull", email = " dmyersturnbull@gmail.com" } ]
authors = [ { name = "Douglas Myers-Turnbull", email = " dmyersturnbull@gmail.com" } ]
license = { text = "CC-BY-SA-4.0" }
dependencies = [
  "mkdocs-include-markdown-plugin>=7.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "mkdocs-minify-plugin>=0.8",
  "mkdocstrings[python]>=0.27",
  "mkdocs-literate-nav>=0.6",
]

# See https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
[dependency-groups]
dev = [
  "pre-commit>=4.2",
  "ruff >=0.11.10",
]

[tool.hatch.build.targets.wheel]
packages = ["contents"]

#########################################################################################
#                                 [tool.ruff]
#########################################################################################

[tool.ruff]

#
#=================================== Ruff basics =============================#

exclude = [] # Rely on https://docs.astral.sh/ruff/settings/#respect-gitignore
src = ["src"] # Needed for import sorting
line-length = 100

[tool.ruff.format]
docstring-code-format = true

#
#=================================== Ruff lint ==============================#
[tool.ruff.lint]

preview = true

# -------------------------- Ruff selected rules ------------------------------
#          >>>#<<< align to col 15 (max possible width)
select = [
  "A",        # flake8-builtins
  "AIR",      # Airflow (does nothing if not used)
  "ANN",      # flake8-annotations
  #"ARG",     # flake8-unused-args //DISABLED: unused args may be necessary in overridden//
  "ASYNC",    # flake8-async
  "B",        # flake8-bugbear
  "B901",     # PREVIEW: Both `return` and `yield` in function/method
  #"BLE",     # flake8-blind-exception (try: * except: only) //DISABLED: covered by E722//
  "C4",       # flake8-comprehensions
  #"C90",     # mmcabe //DISABLED: useful but thin-lined and time-intensive//
  #"COM",     # flake8-commas //DISABLED: handled by formatter//
  #"CPY",     # flake8-copyright //DISABLED: handle carefully instead; also unmaintained//
  #"D",       # pydocstyle //DISABLED: most rules handled by formatter//
  "D100",     # undocumented public module (could be just 1 line)
  "D101",     # undocumented public class (could be just 1 line)
  #"D102",    # undocumented public method //DISABLED: unnecessary if obviously named//
  #"D103",    # undocumented public method //DISABLED: unnecessary if obviously named//
  #"D104",    # undocumented public package //DISABLED: unnecessary if obviously named//
  #"D105",    # undocumented magic method //DISABLED: usually unnecessary//
  #"D106",    # undocumented nested public class //DISABLED: often covered by enclosing class//
  #"D107",    # undocumented `__init__` method //DISABLED: refactor if it needs documenting//
  "D210",     # whitespace around text (almost all auto-fixable)
  "D214",     # over-indented section
  "D3",       # docstring ''', \, etc. (almost all auto-fixable)
  "D4",       # blank docstring sections, etc. (almost all auto-fixable)
  "DJ",       # flake8-django (does nothing if not used)
  #"DOC",     # pydoclint //DISABLED: encourages writing sections out of habit//
  "DOC202",   # says "return" but does not (PREVIEW)
  "DOC403",   # says "yield" but does not (PREVIEW)
  "DOC502",   # says "raise" but does not (PREVIEW)
  "DTZ",      # flake8-datetimez
  #"E",       # pycodestyle ERRORs //DISABLED: almost all handled by formatter//
  "E7",       # == True, bare except, lambda assignment, 'l' in names, etc.
  "E9",       # can't lint -- syntax error, etc.
  "EM",       # flake8-errmsg
  #"ERA",     # eradicate (commented-out code) //DISABLED: catches code in comments, etc.//
  #"EXE",     # flake8-executable //DISABLED: pre-commit shebang rules instead//
  "F",        # pyflakes
  "FA",       # flake8-future-annotations
  "FAST",     # fastapi (does nothing if unused)
  #"FBT",     # flake8-boolean-trap //DISABLED: debatable and sometimes unavoidable//
  #"FIX",     # flake8-fix*me //DISABLED: unnecessary //
  "FIX003",   # 'XXX: ' comments (use F*I*X*M*E or T*O*D*O instead)
  "FIX004",   # 'HACK: ' comments (use F*I*X*M*E or T*O*D*O instead)
  "FLY",      # flynt (https://pypi.org/project/flynt/; updates .format)
  "FURB",     # refurb (misc., mostly fixable)
  #"E",       # flake8 errors //DISABLED: handled by formatter or nitpicky//
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventionals
  #"INP",     # flake8-no-pep420 (require __init__.py to import) //DISABLED: false positives//
  "INT",      # flake8-gettext (i18n)
  "ISC",      # flake8-implicit-str-concat
  "LOG",      # flake8-logging
  "N",        # pep8-naming
  "NPY",      # Numpy rules (does nothing if not used)
  "PD",       # pandas-vet (does nothing if not used)
  "PERF",     # perflint
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie (misc. lint rules)
  "PL",       # pylint (PLC, PLE, PLR, and PLW)
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  #"PYI",     # flake8-pyi (rules for stub files) //DISABLED: auto-generate stub files//
  #"Q",       # flake8-quotes //DISABLED: discouraged by Ruff: formatter covers it//
  #"RSE",     # flake8-raise //DISABLED: should pass exception args; auto-fix makes mistakes//
  "RET",      # flake8-return (almost all auto-fixable)
  "RUF",      # Ruff-specific tests
  "S",        # bandit
  "SIM",      # flake8-simplify
  "SLF",      # flake8-self (private access)
  "SLOT",     # flake8-slots
  "T10",      # flake8-debugger (bans debugger)
  "T20",      # flake8-print (bands print and pprint)
  #"TD",      # flake8-to*do //DISABLED: bans fix*me, needs specific syntax, nitpicky//
  "TCH",      # flake8-type-checking
  "TID",      # flake8-tidy-imports (bans relative imports)
  "TRY",      # tryceratops (try-except-raise)
  "UP",       # pyupgrade
  #"W",       # warnings //DISABLED: most fixed by formatter//
  "W60",      # E605 invalid escape character
  "YTT",      # flake8-2020 (incorrect Python version checks)
  "RUF",      # Ruff-specific rules
  "RUF027",   # possible f-string (PREVIEW)
]

# -------------------------- Ruff ignored rules -------------------------------
ignore = [
  "PLR6301",  # 'self' not used (correct for overrides; more OOP)
  "RUF001",   # confusable characters
  "RUF002",   # confusable characters
  "RUF003",   # confusable characters
  "PLC0415",  # imports at top (sometimes want lazy import)
  "RUF021",   # demands parentheses in `or (x and y)`
]

# -------------------------- Ruff unfixable rules -----------------------------
unfixable = [
  "ERA001",   # commented-out code (not autofixable currently, but just in case)
  "F841",     # unused variable
  "SIM112",   # uncapitalized env var
  "RUF027",   # possible f-string -- can make mistakes
  "RUF102",   # invalid noqa
]

# -------------------------- Ruff delegated options ---------------------------
flake8-bandit.check-typed-exception = true
pydocstyle.convention = "google"
flake8-tidy-imports.ban-relative-imports = "all"
isort.detect-same-package = false # Use `tool.ruff.src` instead.

# -------------------------- delegated pylint options -------------------------
[tool.ruff.lint.pylint]
max-args = 8 # default is 5
max-positional-args = 3 # default is 5
max-bool-expr = 8 # default is 5
#allow-dunder-method-names = [] # Needed if custom dunders are used.

# -------------------------- Ruff per-file ignores ----------------------------
[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "INP001",  # missing __init__
  "PLR2004", # magic value
  "S101",    # assert
  "S105",    # possible password in string
  "S106",    # in function arg
  "S107",    # in function default
  "S108",    # harcoded temp file
  "TID252",  # relative import
]
