# SPDX-FileCopyrightText: Copyright 2017-2025, Douglas Myers-Turnbull
# SPDX-PackageHomePage: https://dmyersturnbull.github.io
# SPDX-License-Identifier: CC-BY-SA-4.0

# ---------------------------- [build-system] ---------------------------------
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.25"]

# ------------------------------ [project] ------------------------------------
[project]
name = "dmyersturnbull.github.io"
version = "0.1.0"
requires-python = "~=3.13.0"
readme = { file = "README.md", content-type = "text/markdown" }
description = "GitHub Pages https://dmyersturnbull.github.io"
maintainers = [ { name = "Douglas Myers-Turnbull", email = " dmyersturnbull@gmail.com" } ]
authors = [ { name = "Douglas Myers-Turnbull", email = " dmyersturnbull@gmail.com" } ]
license = { text = "CC-BY-SA-4.0" }
dependencies = [
  "mkdocs-include-markdown-plugin>=7.1",
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "mkdocs-minify-plugin>=0.8",
  "mkdocstrings[python]>=0.30",
  "mkdocs-literate-nav>=0.6",
]

# -------------------------- [dependency-groups] ------------------------------
# See https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
[dependency-groups]
dev = [
  "pre-commit>=4.2",
  "ruff>=0.12.8",
  "ty>=0.0.1a16",
]

# ----------------------------- [tool.hatch] ----------------------------------
[tool.hatch.build.targets.wheel]
packages = ["contents"]

# ------------------------------ [tool.ruff] ----------------------------------
[tool.ruff]
exclude = [] # Rely on https://docs.astral.sh/ruff/settings/#respect-gitignore
src = ["src"] # Needed for import sorting
line-length = 100 # Keep consistent with `.editorconfig`.

# -------------------------- [tool.ruff.format] -------------------------------
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

# -------------------------- [tool.ruff.lint] ---------------------------------
[tool.ruff.lint]

preview = true
select = ["ALL"]

#          >>>#<<< align to col 15 (max possible width)
ignore = [
  # Conflicts with the formatter:
  # (See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
  "W191",     # indented with tabs
  "D206",     # docstring indented with tabs
  "E114",     # indent not multiple of 4
  "E117",     # over-indented
  "E501",     # line too long
  "W505",     # docstring line too long
  "COM812",   # lacks trailing comma
  "COM819",   # has trailing comma
  "D300",     # triple single quotes
  "ISC002",   # implicit string concatentation
  "Q",        # quotes (formatter should cover completely)
  # ---
  # Other ignored rules:
  "D1",       # Undocumented public __ (don't write useless comments)
  "D401",     # Imperative mood
  "D417",     # Undocumented param (again, don't write useless text)
  "DOC201",   # Missing `Returns:`
  "DOC402",   # Missing `Yields:`
  "DOC501",   # Missing `Raises:` exception
  "DOC502",   # `Raises` lists exeption not raised directly (often ok)
  "E722",     # "bare-except" (use "blind-except" BLE001 instead)
  "FIX002",   # T*O*D*O (consider these to be non-critical)
  "PLR2004",  # magic value (includes 2, 256, 404, etc.)
  "PLR6301",  # 'self' not used (correct for overrides)
  "RUF001",   # confusable characters (would ban en dash, etc.)
  "RUF002",   # confusable characters
  "RUF003",   # confusable characters
  "RUF021",   # `or x and y` without parens (unnecessary)
  "S403",     # import of pickle (S301 on pickle calls is sufficient)
  "S404",     # import of subprocess (S602/S603 on subprocess calls is sufficient)
  "TD",       # flake8-to*do (requires a specific format)
]

unfixable = [
  "TC007",    # Quotes type alias definitions (move needed imports outside `TYPE_CHECKING` instead)
]
extend-safe-fixes = [
  "LOG004",   # Converts `.exception` to `.error` outside `except` blocks
]
extend-unsafe-fixes = [
  "B905",     # Adds `strict=False` to `zip` (normally `strict=True` is wanted)
  "PLW1510",  # Adds `check=False` to `subprocess.run` (normally `check=True` is wanted)
  "RUF102",   # Removes invalid `noqa`
]

# Delegated options
flake8-bandit.check-typed-exception = true
flake8-copyright.min-file-size = 2048
flake8-copyright.notice-rgx = "(?m)^# SPDX-License-Identifier: "
flake8-tidy-imports.ban-relative-imports = "all"
isort.detect-same-package = false # Use `tool.ruff.src` instead.
isort.split-on-trailing-comma = false # would conflict with formatter
pycodestyle.max-doc-length = 100 # match tool.ruff.line-length
pydocstyle.convention = "google"

# Delegated options for pylint
[tool.ruff.lint.pylint]
max-args = 10 # default is 5
max-positional-args = 5 # default is `max-args`
max-bool-expr = 10 # default is 5
max-public-methods = 30 # default is 20
max-nested-blocks = 4 # default is 5
allow-dunder-method-names = ["__rich_repr__"] # allow custom dunders

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401",    # unused import
]
"tests/**/*" = [
  "D10",      # missing docstrings
  "INP001",   # missing __init__
  "PLC2701",  # import of private module
  "S101",     # assert
  "S105",     # possible password in string
  "S106",     # ...in function arg
  "S107",     # ...in function default
  "S108",     # harcoded temp file
  "TID252",   # relative import
]
